--- a/survey.css
+++ b/survey.css
@@ -433,7 +433,7 @@ p {
     box-shadow 0.2s ease;
 }
 
-.answers .answer-btn.selected + .other-input {
+.answers .answer-btn.selected+.other-input {
   opacity: 1;
   transform: translateY(0);
   pointer-events: auto;
@@ -653,6 +653,12 @@ p {
     padding: 0 0.5rem;
   }
 
+  .scale-scroll {
+    scroll-behavior: smooth;
+    scroll-snap-type: x proximity;
+  }
+
+
   .card {
     width: 100%;
     max-width: 100%;
@@ -711,25 +717,21 @@ p {
   }
 
   .scale-scroll {
-    mask-image: linear-gradient(
-      to right,
-      transparent 0%,
-      rgba(0, 0, 0, 0.25) 6%,
-      black 18%,
-      black 82%,
-      rgba(0, 0, 0, 0.25) 94%,
-      transparent 100%
-    );
+    mask-image: linear-gradient(to right,
+        transparent 0%,
+        rgba(0, 0, 0, 0.25) 6%,
+        black 18%,
+        black 82%,
+        rgba(0, 0, 0, 0.25) 94%,
+        transparent 100%);
 
-    -webkit-mask-image: linear-gradient(
-      to right,
-      transparent 0%,
-      rgba(0, 0, 0, 0.25) 6%,
-      black 18%,
-      black 82%,
-      rgba(0, 0, 0, 0.25) 94%,
-      transparent 100%
-    );
+    -webkit-mask-image: linear-gradient(to right,
+        transparent 0%,
+        rgba(0, 0, 0, 0.25) 6%,
+        black 18%,
+        black 82%,
+        rgba(0, 0, 0, 0.25) 94%,
+        transparent 100%);
   }
 
   .scale-scroll::before,
