salabots skrols telefoniem

--- a/survey.css
+++ b/survey.css
@@ -846,6 +846,10 @@ p {
   .scale-scroll::after {
     display: none;
   }
+
+  .scale-arrows {
+    display: block;
+  }
 }
 
 /* ===============================
